@@ -1,40 +1,79 @@
 package jetbrains.buildServer.sbt;
 
 import jetbrains.buildServer.RunBuildException;
-import jetbrains.buildServer.agent.runner.BuildServiceAdapter;
-import jetbrains.buildServer.agent.runner.ProgramCommandLine;
+import jetbrains.buildServer.agent.runner.*;
+import jetbrains.buildServer.runner.CommandLineArgumentsUtil;
+import jetbrains.buildServer.runner.JavaRunnerConstants;
+import org.jetbrains.annotations.NotNull;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.io.File;
+import java.io.IOException;
+import java.util.*;
 
 import static java.util.Arrays.asList;
+import static jetbrains.buildServer.agent.AgentRuntimeProperties.AGENT_WORK_DIR;
+import static jetbrains.buildServer.agent.AgentRuntimeProperties.RUNTIME_PROPS_FILE;
 
 public class SbtRunnerBuildService extends BuildServiceAdapter {
+  private final static String[] SBT_JARS = new String[] {
+      "jansi.jar",
+      "sbt-launch.jar",
+      "classes"
+  };
 
-    @Override
-    public ProgramCommandLine makeProgramCommandLine() throws RunBuildException {
+  @NotNull
+  @Override
+  public ProgramCommandLine makeProgramCommandLine() throws RunBuildException {
+    JavaCommandLineBuilder cliBuilder = new JavaCommandLineBuilder();
+    cliBuilder.setJavaHome(getRunnerParameters().get(JavaRunnerConstants.TARGET_JDK_HOME));
+    cliBuilder.setBaseDir(getCheckoutDirectory().getAbsolutePath());
 
-        // use jetbrains.buildServer.agent.runner.JavaCommandLineBuilder instead?
-        // see TeamCity/buildAgent/lib/agent.jar
+    cliBuilder.setSystemPrperties(getVMProperties());
+    Map<String, String> envVars = new HashMap<String, String>(getEnvironmentVariables());
+    envVars.put("SBT_HOME", getSbtHome());
+    cliBuilder.setEnvVariables(envVars);
 
+    cliBuilder.setJvmArgs(JavaRunnerUtil.extractJvmArgs(getRunnerParameters()));
+    cliBuilder.setClassPath(getClasspath());
+    cliBuilder.setMainClass("SbtJansiLaunch");
+    cliBuilder.setProgramArgs(getProgramParameters());
+    cliBuilder.setWorkingDir(getWorkingDirectory().getAbsolutePath());
 
-        return new ProgramCommandLine() {
-            public String getExecutablePath() throws RunBuildException {
-                return "/usr/bin/java";
-            }
+    return buildCommandline(cliBuilder);
+  }
 
-            public String getWorkingDirectory() throws RunBuildException {
-                return "/home/roberto/scala-coursera/funsets";
-            }
-
-            public List<String> getArguments() throws RunBuildException {
-                return asList("-XX:+CMSClassUnloadingEnabled -Xms1536m -Xmx1536m -XX:MaxPermSize=384m -XX:ReservedCodeCacheSize=192m -Dfile.encoding=UTF8 -jar /home/roberto/.sbt/.lib/0.11.3-2/sbt-launch.jar".split(" "));
-            }
-
-            public Map<String, String> getEnvironment() throws RunBuildException {
-                return new HashMap<String, String>();
-            }
-        };
+  @NotNull
+  private ProgramCommandLine buildCommandline(@NotNull final JavaCommandLineBuilder cliBuilder) throws RunBuildException {
+    try {
+      return cliBuilder.build();
+    } catch (CannotBuildCommandLineException e) {
+      throw new RunBuildException(e.getMessage());
     }
+  }
+
+  @NotNull
+  private Map<String, String> getVMProperties() throws RunBuildException {
+    return JavaRunnerUtil.composeSystemProperties(getBuild(), getRunnerContext());
+  }
+
+  @NotNull
+  public List<String> getProgramParameters() {
+    return CommandLineArgumentsUtil.getRunnerArgs(getRunnerParameters());
+  }
+
+  @NotNull
+  public String getClasspath() {
+    String sbtHome = getSbtHome();
+    File jarDir = new File(sbtHome, "bin");
+    StringBuilder sb = new StringBuilder();
+    for (String jar: SBT_JARS) {
+      sb.append(new File(jarDir, jar).getAbsolutePath()).append(File.pathSeparator);
+    }
+    return sb.toString();
+  }
+
+  @NotNull
+  private String getSbtHome() {
+    return getRunnerParameters().get(SbtRunnerConstants.SBT_HOME_PARAM);
+  }
 }
